ssl/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
      kubernetes.io/tls-acme: "true"
      ingress.kubernetes.io/proxy-body-size: 0m
    name: ingress
spec:
    rules:
      - host: books.sacacorp.com 
        http:
          paths:
            - backend:
                serviceName: books
                servicePort: 5000
              path: /
    tls:
        - hosts:
            - books.sacacorp.com
          secretName: tls-books
